{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 15,
  "lineage": "0037be71-73aa-7e7a-d693-d566a335738d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:004343626765:vpc/vpc-0c9c061562951c668",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e52f616bb4d49e57",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0dbc2c942b9e64b16",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c9c061562951c668",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0604e34fd0be9d761",
            "owner_id": "004343626765"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "app-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:004343626765:loadbalancer/app/phonebook-lb-tf/5afbce63d59ed93d",
            "arn_suffix": "app/phonebook-lb-tf/5afbce63d59ed93d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "phonebook-lb-tf-104238137.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:004343626765:loadbalancer/app/phonebook-lb-tf/5afbce63d59ed93d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "phonebook-lb-tf",
            "security_groups": [
              "sg-00532497bd74b2ae9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0163a073567d5e219"
              },
              {
                "subnet_id": "subnet-02b5caaa885140278"
              },
              {
                "subnet_id": "subnet-05af7ce3993d8ea48"
              },
              {
                "subnet_id": "subnet-063f7f4fa234162d0"
              },
              {
                "subnet_id": "subnet-0803cece9e7b032cc"
              },
              {
                "subnet_id": "subnet-0f133b78fd1224111"
              }
            ],
            "subnets": [
              "subnet-0163a073567d5e219",
              "subnet-02b5caaa885140278",
              "subnet-05af7ce3993d8ea48",
              "subnet-063f7f4fa234162d0",
              "subnet-0803cece9e7b032cc",
              "subnet-0f133b78fd1224111"
            ],
            "vpc_id": "vpc-0c9c061562951c668",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "data.aws_subnets.example",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "app-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:004343626765:listener/app/phonebook-lb-tf/5afbce63d59ed93d/289f4c0b924328f5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:004343626765:targetgroup/phonebook-lb-tg/6f94e76f2d19dd7e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:004343626765:listener/app/phonebook-lb-tf/5afbce63d59ed93d/289f4c0b924328f5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:004343626765:loadbalancer/app/phonebook-lb-tf/5afbce63d59ed93d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.app-lb",
            "aws_alb_target_group.app-lb-tg",
            "aws_security_group.alb-sg",
            "data.aws_subnets.example",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:004343626765:targetgroup/phonebook-lb-tg/6f94e76f2d19dd7e",
            "arn_suffix": "targetgroup/phonebook-lb-tg/6f94e76f2d19dd7e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:004343626765:targetgroup/phonebook-lb-tg/6f94e76f2d19dd7e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "phonebook-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c9c061562951c668"
          },
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:004343626765:security-group/sg-00532497bd74b2ae9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00532497bd74b2ae9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ALBSecurityGroup",
            "name_prefix": "",
            "owner_id": "004343626765",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TF_ALBSecurityGroup"
            },
            "tags_all": {
              "Name": "TF_ALBSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9c061562951c668"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:004343626765:security-group/sg-02e5168974bba2392",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e5168974bba2392",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d7de7d19e835495b"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "RDSSecurityGroup",
            "name_prefix": "",
            "owner_id": "004343626765",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TF_RDSSecurityGroup"
            },
            "tags_all": {
              "Name": "TF_RDSSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9c061562951c668"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_security_group.server-sg",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:004343626765:security-group/sg-0d7de7d19e835495b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d7de7d19e835495b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00532497bd74b2ae9"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "WebServerSecurityGroup",
            "name_prefix": "",
            "owner_id": "004343626765",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TF_WebServerSecurityGroup"
            },
            "tags_all": {
              "Name": "TF_WebServerSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9c061562951c668"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "data.aws_vpc.selected"
          ]
        }
      ]
    }
  ]
}